# splitback

./: .env.demo.example  .env.dev.example  .env.example  .env.prod.example  .env.relay.example  .gitignore  PLAN.md  README.md  deploy-result.txt  docker-compose.yml
backend/: AUTH_HANDOFF.md  Dockerfile  HANDOFF.md  alembic.ini  pyproject.toml  run_tests.sh
backend/app/: categories.py  category_builtin.py  config.py  db.py  main.py  ratelimit.py  server_settings.py  utils.py
backend/migrations/: env.py
backend/scripts/: export_openapi.py  inspect_sw_group.py  refresh_fidir.py  seed_category_prefs.py
backend/tests/: _runner.py  test_account_delete.py  test_account_deletion.py  test_account_overrides.py  test_auth.py  test_auth_access.py  test_auth_endpoints.py  test_auth_identity.py  test_auth_tokens.py  test_backup_retention.py  test_balances.py  test_categories_api.py  test_categories_backfill.py  test_category_builtin.py  test_crypto_push.py  test_demo.py  test_demo_prune.py  test_dev_seed.py  test_devices.py  test_expense_archive.py  test_expense_delete.py  test_friend_balances.py  test_goals.py  test_group_overrides.py  test_groups_expenses.py  test_import_local.py  test_include_overrides.py  test_incremental_sync.py  test_institutions.py  test_invites.py  test_logos.py  test_notification_prefs.py  test_notification_producer.py  test_notifications.py  test_notifications_sync.py  test_ofx_parser.py  test_plaid_items_manual.py  test_plaid_mapper.py  test_plaid_relink.py  test_plaid_sync.py  (+26 more)
relay/: Dockerfile  pyproject.toml
relay/app/: apns.py  config.py  (+3 more)
(+429 files in other folders)
