[project]
name = "splitback-backend"
version = "0.1.0"
description = "SplitBack backend API — self-hosted personal finance + expense splitting"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "minio>=7.2",
    "splitwise>=3.0",
    "plaid-python>=18.0",
    "pyjwt[crypto]>=2.8",
    "requests>=2.31",
    "httpx>=0.27",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"
